rest get experiment
